tests/cases/errors/runtime_undefined_variable_set.lox
// Assigning to an undeclared global is a runtime error
// (no implicit declaration on assignment).
// expect runtime error: Undefined variable 'missing'.
missing = 1;
